--- a/nttsite/mysite/templates/login.html
+++ b/nttsite/mysite/templates/login.html
@@ -1,6 +1,6 @@
-
-{% extends 'base.html' %}
-{% block title %} 登入頁面 {% endblock %} {% block content %}
+{% extends 'base.html' %} 
+{% block title %} 登入頁面 {% endblock %} 
+{% block content %}
 
 <div class="container">
   {% if message %}
@@ -12,7 +12,7 @@
     </div>
   </div>
   <form>
-    <div class="mb-3 ">
+    <div class="mb-3">
       <label for="exampleInputEmail1" class="form-label">Email address</label>
       <input
         type="email"
@@ -28,10 +28,17 @@
       <label for="exampleInputPassword1" class="form-label">Password</label>
       <input type="password" class="form-control" id="exampleInputPassword1" />
     </div>
-    <div class="mb-3 form-check">
-      <input type="checkbox" class="form-check-input" id="exampleCheck1" />
-      <label class="form-check-label" for="exampleCheck1">Check me out</label>
+    <div class="mb-3 d-flex justify-content-between align-items-center">
+      <div class="mb-3 form-check">
+        <input type="checkbox" class="form-check-input" id="exampleCheck1" />
+        <label class="form-check-label" for="exampleCheck1">Remember Me</label>
+      </div>
+      <div class="mg-3">
+        <a href="password-reset" class="text-decoration-none">忘記密碼</a>
+        <a href="register" class="text-decoration-none">註冊</a>
+      </div>
     </div>
+
     <button type="submit" class="btn btn-primary">Submit</button>
   </form>
 </div>
