--- a/nttsite/mysite/templates/register.html
+++ b/nttsite/mysite/templates/register.html
@@ -7,23 +7,38 @@
     <div class="col-6">
       <form action="register" method="post">
         {% csrf_token %}
+        <!-- email 區域 -->
         <div class="mb-3">
           <label for="email" class="form-label">Email address</label>
-          <input type="email" class="form-control" id="email" aria-describedby="emailHelp"/>
+          <input type="email" class="form-control" id="email" name="email"  value="{{ email }}" aria-describedby="emailHelp"/>
+            {% if email_message %}
+            <div id="passwordHelpBlock" class="form-text">
+            {{ email_message }}
+            </div>
+            {% endif %}
         </div>
+        <!-- nick 區域 -->
         <div class="mb-3">
             <label for="nickname" class="form-label">Nick Name</label>
-            <input type="text" class="form-control" id="nickname">
+            <input type="text" class="form-control" id="nickname" name="nickname" value="{{ nickname }}">
         </div>
+        <!-- password 區域 -->
         <div class="mb-3">
           <label for="pw" class="form-label">Password</label>
-          <input type="password" class="form-control" id="pw"/>
+          <input type="password" class="form-control" id="pw" name="password" value="{{ password }}"/>
         </div>
+        <!-- confirm password 區域 -->
         <div class="mb-3">
           <label for="confirm_pw" class="form-label">Confirm Password</label>
-          <input type="password" class="form-control" id="confirm_pw"/>
+          <input type="password" class="form-control" id="confirm_pw" name="confirm_pw" value="{{ confirm_pw }}"/>
         </div>
 
+        <!-- 告警訊息 區域-->
+        {% if message %}
+            <div class="alert alert-warning" role="alert">
+            {{ message }}
+            </div>
+        {% endif %}
         <button type="submit" class="btn btn-primary">Submit</button>
       </form>
     </div>
