--- a/blog/templates/blog_ntt/index.html
+++ b/blog/templates/blog_ntt/index.html
@@ -9,8 +9,8 @@
         integrity="sha384-4Q6Gf2aSP4eDXB8Miphtr37CMZZQ5oXLH2yaXMJ2w8e2ZtHTl7GptT4jmndRuHDT" crossorigin="anonymous" />
 </head>
 
-<body>
-    <header class="p-3 text-bg-light border-bottom">
+<body style="background-color:#DCDCDC;">
+    <header class="p-3 text-bg-light border-bottom mb-3">
         <div class="container">
             <div class="d-flex flex-wrap align-items-center justify-content-center justify-content-lg-start">
                 <a href="/" class="d-flex align-items-center mb-2 mb-lg-0 text-white text-decoration-none">
@@ -28,12 +28,36 @@
                     <input type="search" class="form-control form-control-dark text-bg-light" placeholder="Search..."
                         aria-label="Search">
                 </form>
-                <div class="text-end"> <button type="button" class="btn btn-outline-primary me-2">Login</button> 
-                    <button
-                        type="button" class="btn btn-outline-warning">Sign-up</button> </div>
+                <div class="text-end"> <button type="button" class="btn btn-outline-primary me-2">Login</button>
+                    <button type="button" class="btn btn-outline-warning">Sign-up</button>
+                </div>
             </div>
         </div>
     </header>
+    <main class="container bg-white rounded p-3">
+        <h1>博客列表</h1>
+        <div class="row row-gap-3">
+            <div class="col-6">
+                <div class="card">
+                    <div class="card-header">
+                        <a href="#">零基礎到項目實戰</a>
+                    </div>
+                    <div class="card-body" style="height: 150px;">
+
+                        <p class="card-text">With supporting text below as a natural lead-in to additional content.</p>
+
+                    </div>
+                    <div class="card-footer text-body-secondary d-flex justify-content-between  align-items-center">
+                        <div>
+                            <img src="https://icons.veryicon.com/png/System/iOS%207/Network%20Router.png" style="height: 40px; width: 40px;" alt="">
+                            <span>Lettuce Lu</span>
+                        </div>
+                        <div>發佈時間 : 2025-05-31 14:21:53</div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </main>
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.6/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-j1CDi7MgGQ12Z7Qab0qlWQ/Qqz24Gc6BM0thvEMVjHnfYGF0rmFCozFSxQBxwHKO"
