# 完成博客詳情頁 template

--- a/blog/templates/blog_ntt/blog_detail.html
+++ b/blog/templates/blog_ntt/blog_detail.html
@@ -36,27 +36,49 @@
         </div>
     </header>
     <main class="container bg-white rounded p-3">
-        <h1>博客列表</h1>
-        <div class="row row-gap-3">
-            <div class="col-6">
-                <div class="card">
-                    <div class="card-header">
-                        <a href="#">零基礎到項目實戰</a>
-                    </div>
-                    <div class="card-body" style="height: 150px;">
-
-                        <p class="card-text">With supporting text below as a natural lead-in to additional content.</p>
-
-                    </div>
-                    <div class="card-footer text-body-secondary d-flex justify-content-between  align-items-center">
-                        <div>
-                            <img src="https://icons.veryicon.com/png/System/iOS%207/Network%20Router.png" style="height: 40px; width: 40px;" alt="">
-                            <span>Lettuce Lu</span>
-                        </div>
-                        <div>發佈時間 : 2025-05-31 14:21:53</div>
-                    </div>
-                </div>
+        <h1>Django 課程詳情</h1>
+        <hr>
+        <div class="card-footer text-body-secondary d-flex justify-content-between  align-items-center">
+            <div>
+                <img src="https://icons.veryicon.com/png/System/iOS%207/Network%20Router.png"
+                    style="height: 40px; width: 40px;" alt="">
+                <span>Lettuce Lu</span>
             </div>
+            <div>發佈時間 : 2025-05-31 14:21:53</div>
+        </div>
+        <hr>
+        <div class="py-3">
+            這是博客的內容
+        </div>
+        <hr>
+        <div class="mt-2">
+            <h3>評論</h3>
+            <form action="" method="post">
+                <div class="mt-2">
+                    <input type="text" class="form-control">
+                </div>
+                <div class="mt-2 text-end">
+                    <button class="btn btn-primary ">
+                        發表
+                    </button>
+                </div>
+            </form>
+        </div>
+        <div class="mt-2">
+            <ul class="list-group list-group-flush">
+                <li class="list-group-item ">
+                    <div class="d-flex justify-content-between align-items-center">
+                        <div class="user-info">
+                            <img src="https://icons.veryicon.com/png/System/iOS%207/Network%20Router.png"
+                                style="height: 30px; width: 30px;" alt="">
+                            <span>Lettuce Lu</span>
+
+                        </div>
+                        <div class="created-time">2025-05-31 14:21:53</div>
+                    </div>
+                    <div class="mt-2">這篇技術文章寫得很詳細, 獲益良多!!!</div>
+                </li>
+            </ul>
         </div>
     </main>
 
