# 完成發佈博客的 template

--- a/blog/templates/blog_ntt/index.html
+++ b/blog/templates/blog_ntt/index.html
@@ -20,7 +20,7 @@
                 <ul class="nav col-12 col-lg-auto me-lg-auto mb-2 justify-content-center mb-md-0">
                     <li><a href="/blog/" class="nav-link px-2 text-secondary">首頁</a></li>
                     <li><a href="/blog/detail" class="nav-link px-2 text-secondary">瀏覽文章</a></li>
-                    <li><a href="#" class="nav-link px-2 text-secondary">發佈博客</a></li>
+                    <li><a href="/blog/pub_blog" class="nav-link px-2 text-secondary">發佈博客</a></li>
                     <li><a href="#" class="nav-link px-2 text-secondary">設備清單</a></li>
                     <li><a href="#" class="nav-link px-2 text-secondary">分行清單</a></li>
                     <li><a href="#" class="nav-link px-2 text-secondary">關於</a></li>
