--- a/blog/templates/blog_ntt/pub_blog.html
+++ b/blog/templates/blog_ntt/pub_blog.html
@@ -7,6 +7,23 @@
     <title>NTT Blog</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.6/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-4Q6Gf2aSP4eDXB8Miphtr37CMZZQ5oXLH2yaXMJ2w8e2ZtHTl7GptT4jmndRuHDT" crossorigin="anonymous" />
+    <!-- Wang Editor 5 文字編輯器 CSS -->
+    <link href="https://unpkg.com/@wangeditor/editor@latest/dist/css/style.css" rel="stylesheet" />
+    <style>
+        #editor—wrapper {
+            border: 1px solid #ccc;
+            z-index: 100;
+            /* 按需定义 */
+        }
+
+        #toolbar-container {
+            border-bottom: 1px solid #ccc;
+        }
+
+        #editor-container {
+            height: 300px;
+        }
+    </style>
 </head>
 
 <body style="background-color:#DCDCDC;">
@@ -36,49 +53,29 @@
         </div>
     </header>
     <main class="container bg-white rounded p-3">
-        <h1>Django 課程詳情</h1>
-        <hr>
-        <div class="card-footer text-body-secondary d-flex justify-content-between  align-items-center">
-            <div>
-                <img src="https://icons.veryicon.com/png/System/iOS%207/Network%20Router.png"
-                    style="height: 40px; width: 40px;" alt="">
-                <span>Lettuce Lu</span>
-            </div>
-            <div>發佈時間 : 2025-05-31 14:21:53</div>
-        </div>
-        <hr>
-        <div class="py-3">
-            這是博客的內容
-        </div>
-        <hr>
-        <div class="mt-2">
-            <h3>評論</h3>
-            <form action="" method="post">
-                <div class="mt-2">
-                    <input type="text" class="form-control">
+        <h1>發佈博客</h1>
+        <div class="mt-3">
+            <form action="" class="form-control" method="post">
+                <label for="subject">標題</label>
+                <input type="text" class="form-control" placeholder="請輸入標題">
+                <label for="category" class="mt-3">分類</label>
+                <select class="form-control" name="category" id="category">
+                    <option class="form-control" value="python" name="category">PYTHON</option>
+                    <option class="form-control" value="Java" name="category">JAVA</option>
+                    <option class="form-control" value="Go Lang" name="category">GO Lang</option>
+                    <option class="form-control" value="PHP" name="category">PHP</option>
+                </select>
+                <label for="content" class="mt-3">內容</label>
+                <div class="">
+                    <div id="editor—wrapper">
+                        <div id="toolbar-container"><!-- 工具栏 --></div>
+                        <div id="editor-container"><!-- 编辑器 --></div>
+                    </div>
                 </div>
                 <div class="mt-2 text-end">
-                    <button class="btn btn-primary ">
-                        發表
-                    </button>
+                    <button class="btn btn-primary">發佈</button>
                 </div>
             </form>
-        </div>
-        <div class="mt-2">
-            <ul class="list-group list-group-flush">
-                <li class="list-group-item ">
-                    <div class="d-flex justify-content-between align-items-center">
-                        <div class="user-info">
-                            <img src="https://icons.veryicon.com/png/System/iOS%207/Network%20Router.png"
-                                style="height: 30px; width: 30px;" alt="">
-                            <span>Lettuce Lu</span>
-
-                        </div>
-                        <div class="created-time">2025-05-31 14:21:53</div>
-                    </div>
-                    <div class="mt-2">這篇技術文章寫得很詳細, 獲益良多!!!</div>
-                </li>
-            </ul>
         </div>
     </main>
 
@@ -91,6 +88,36 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.6/dist/js/bootstrap.min.js"
         integrity="sha384-RuyvpeZCxMJCqVUGFI0Do1mQrods/hhxYlcVfGPOfQtPJh0JCw12tUAZ/Mv10S7D"
         crossorigin="anonymous"></script>
+    <!-- Wang Editor 5 文字編輯器 JS -->
+    <script src="https://unpkg.com/@wangeditor/editor@latest/dist/index.js"></script>
+    <script>
+        const { createEditor, createToolbar } = window.wangEditor
+
+        const editorConfig = {
+            placeholder: 'Type here...',
+            onChange(editor) {
+                const html = editor.getHtml()
+                console.log('editor content', html)
+                // 也可以同步到 <textarea>
+            },
+        }
+
+        const editor = createEditor({
+            selector: '#editor-container',
+            html: '<p><br></p>',
+            config: editorConfig,
+            mode: 'default', // or 'simple'
+        })
+
+        const toolbarConfig = {}
+
+        const toolbar = createToolbar({
+            editor,
+            selector: '#toolbar-container',
+            config: toolbarConfig,
+            mode: 'default', // or 'simple'
+        })
+    </script>
 </body>
 
 </html>
