--- a/blog/blog_auth/templates/register.html
+++ b/blog/blog_auth/templates/register.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>NTT Blog</title>
+    <title>Register</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.6/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-4Q6Gf2aSP4eDXB8Miphtr37CMZZQ5oXLH2yaXMJ2w8e2ZtHTl7GptT4jmndRuHDT" crossorigin="anonymous" />
 </head>
@@ -29,56 +29,48 @@
                     <input type="search" class="form-control form-control-dark text-bg-light" placeholder="Search..."
                         aria-label="Search">
                 </form>
-                    <a href="/auth/login" class="btn btn-outline-primary me-2" role="button" aria-disabled="true">Login</a>
-                    <a href="/auth/register" class="btn btn-outline-warning" role="button" aria-disabled="true">Register</a>
+                <div class="text-end">
+                    <a href="login" class="btn btn-outline-primary me-2" role="button" aria-disabled="true">Login</a>
+                    <a href="register" class="btn btn-outline-warning" role="button" aria-disabled="true">Register</a>
                 </div>
             </div>
         </div>
     </header>
     <main class="container bg-white rounded p-3">
-        <h1>Django 課程詳情</h1>
-        <hr>
-        <div class="card-footer text-body-secondary d-flex justify-content-between  align-items-center">
-            <div>
-                <img src="https://icons.veryicon.com/png/System/iOS%207/Network%20Router.png"
-                    style="height: 40px; width: 40px;" alt="">
-                <span>Lettuce Lu</span>
-            </div>
-            <div>發佈時間 : 2025-05-31 14:21:53</div>
-        </div>
-        <hr>
-        <div class="py-3">
-            這是博客的內容
-        </div>
-        <hr>
-        <div class="mt-2">
-            <h3>評論</h3>
-            <form action="" method="post">
-                <div class="mt-2">
-                    <input type="text" class="form-control">
-                </div>
-                <div class="mt-2 text-end">
-                    <button class="btn btn-primary ">
-                        發表
-                    </button>
-                </div>
-            </form>
-        </div>
-        <div class="mt-2">
-            <ul class="list-group list-group-flush">
-                <li class="list-group-item ">
-                    <div class="d-flex justify-content-between align-items-center">
-                        <div class="user-info">
-                            <img src="https://icons.veryicon.com/png/System/iOS%207/Network%20Router.png"
-                                style="height: 30px; width: 30px;" alt="">
-                            <span>Lettuce Lu</span>
 
-                        </div>
-                        <div class="created-time">2025-05-31 14:21:53</div>
+        <div style="width: 330px;" class="m-auto">
+            <h1>註冊</h1>
+            <form action="register" method="post">
+
+                <div class="mt-2">
+                    <label for="username">用戶名</label>
+                    <input type="text" class="form-control" name="username" id="email" placeholder="請輸入郵箱">
+                </div>
+                <div class="mt-2">
+                    <label for="email">郵箱</label>
+                    <input type="text" class="form-control" name="email" id="email" placeholder="請輸入郵箱">
+                </div>
+                <div class="mt-2">
+                    <label for="password">密碼</label>
+                    <input type="password" class="form-control" name="password" id="password" placeholder="請輸入密碼">
+                </div>
+                <div class="mt-2">
+                    <label for="confirm">確認密碼</label>
+                    <input type="password" class="form-control" name="confirm" id="confirm" placeholder="確認密碼">
+                </div>
+                <div class="mt-2">
+                    <div class="input-group my-3">
+                        <label for="code"></label>
+                        <input type="text" class="form-control" name="code" id="code" placeholder="驗證碼">
+                        <button class="btn btn-outline-secondary" type="button">獲取驗證碼</button>
                     </div>
-                    <div class="mt-2">這篇技術文章寫得很詳細, 獲益良多!!!</div>
-                </li>
-            </ul>
+                </div>
+                <div class="mt-3">
+                    <button class="btn btn-primary w-100">立即註冊</button>
+                </div>
+        </div>
+        </form>
+
         </div>
     </main>
 
