--- a/blog/templates/blog_ntt/pub_blog.html
+++ b/blog/templates/blog_ntt/pub_blog.html
@@ -46,8 +46,8 @@
                     <input type="search" class="form-control form-control-dark text-bg-light" placeholder="Search..."
                         aria-label="Search">
                 </form>
-                <div class="text-end"> <button type="button" class="btn btn-outline-primary me-2">Login</button>
-                    <button type="button" class="btn btn-outline-warning">Sign-up</button>
+                    <a href="/auth/login" class="btn btn-outline-primary me-2" role="button" aria-disabled="true">Login</a>
+                    <a href="/auth/register" class="btn btn-outline-warning" role="button" aria-disabled="true">Register</a>
                 </div>
             </div>
         </div>
