--- a/blog/templates/base.html
+++ b/blog/templates/base.html
@@ -4,9 +4,26 @@
 <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Register</title>
+    <title>{% block title %}{% endblock %}</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.6/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-4Q6Gf2aSP4eDXB8Miphtr37CMZZQ5oXLH2yaXMJ2w8e2ZtHTl7GptT4jmndRuHDT" crossorigin="anonymous" />
+    <!-- Wang Editor 5 文字編輯器 CSS -->
+    <link href="https://unpkg.com/@wangeditor/editor@latest/dist/css/style.css" rel="stylesheet" />
+    <style>
+        #editor—wrapper {
+            border: 1px solid #ccc;
+            z-index: 100;
+            /* 按需定义 */
+        }
+
+        #toolbar-container {
+            border-bottom: 1px solid #ccc;
+        }
+
+        #editor-container {
+            height: 300px;
+        }
+    </style>
 </head>
 
 <body style="background-color:#DCDCDC;">
@@ -29,49 +46,14 @@
                     <input type="search" class="form-control form-control-dark text-bg-light" placeholder="Search..."
                         aria-label="Search">
                 </form>
-                <div class="text-end">
-                    <a href="login" class="btn btn-outline-primary me-2" role="button" aria-disabled="true">Login</a>
-                    <a href="register" class="btn btn-outline-warning" role="button" aria-disabled="true">Register</a>
+                    <a href="/auth/login" class="btn btn-outline-primary me-2" role="button" aria-disabled="true">Login</a>
+                    <a href="/auth/register" class="btn btn-outline-warning" role="button" aria-disabled="true">Register</a>
                 </div>
             </div>
         </div>
     </header>
     <main class="container bg-white rounded p-3">
-
-        <div style="width: 330px;" class="m-auto">
-            <h1>註冊</h1>
-            <form action="register" method="post">
-
-                <div class="mt-2">
-                    <label for="username">用戶名</label>
-                    <input type="text" class="form-control" name="username" id="email" placeholder="請輸入郵箱">
-                </div>
-                <div class="mt-2">
-                    <label for="email">郵箱</label>
-                    <input type="text" class="form-control" name="email" id="email" placeholder="請輸入郵箱">
-                </div>
-                <div class="mt-2">
-                    <label for="password">密碼</label>
-                    <input type="password" class="form-control" name="password" id="password" placeholder="請輸入密碼">
-                </div>
-                <div class="mt-2">
-                    <label for="confirm">確認密碼</label>
-                    <input type="password" class="form-control" name="confirm" id="confirm" placeholder="確認密碼">
-                </div>
-                <div class="mt-2">
-                    <div class="input-group my-3">
-                        <label for="code"></label>
-                        <input type="text" class="form-control" name="code" id="code" placeholder="驗證碼">
-                        <button class="btn btn-outline-secondary" type="button">獲取驗證碼</button>
-                    </div>
-                </div>
-                <div class="mt-3">
-                    <button class="btn btn-primary w-100">立即註冊</button>
-                </div>
-        </div>
-        </form>
-
-        </div>
+        {% block main %}{% endblock %}
     </main>
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.6/dist/js/bootstrap.bundle.min.js"
