--- a/blog/templates/base_auth.html
+++ b/blog/templates/base_auth.html
@@ -4,9 +4,10 @@
 <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Login</title>
+    <title>{% block title %}{% endblock %}</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.6/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-4Q6Gf2aSP4eDXB8Miphtr37CMZZQ5oXLH2yaXMJ2w8e2ZtHTl7GptT4jmndRuHDT" crossorigin="anonymous" />
+
 </head>
 
 <body style="background-color:#DCDCDC;">
@@ -29,7 +30,7 @@
                     <input type="search" class="form-control form-control-dark text-bg-light" placeholder="Search..."
                         aria-label="Search">
                 </form>
-                <div class="text-end"> 
+                <div class="text-end">
                     <a href="login" class="btn btn-outline-primary me-2" role="button" aria-disabled="true">Login</a>
                     <a href="register" class="btn btn-outline-warning" role="button" aria-disabled="true">Register</a>
                 </div>
@@ -37,31 +38,7 @@
         </div>
     </header>
     <main class="container bg-white rounded p-3">
-
-        <div style="width: 330px;" class="m-auto">
-            <h1 >登入</h1>
-            <form action="login" method="post">
-                
-                <div class="mt-2">
-                    <label for="email">郵箱</label>
-                    <input type="text" class="form-control" name="email" id="email" placeholder="請輸入郵箱">
-                </div>
-                <div class="mt-2">
-                    <label for="password">密碼</label>
-                    <input type="password" class="form-control" name="password" id="password" placeholder="請輸入密碼">
-                </div>
-                <div class="form-check mt-2">
-                    <input class="form-check-input" type="checkbox" value="" id="remember">
-                    <label class="form-check-label" for="remember">
-                        記住我
-                    </label>
-                </div>
-                <div class="mt-3">
-                    <button class="btn btn-primary w-100">立即登入</button>
-                </div>
-            </form>
-
-        </div>
+        {% block main %}{% endblock %}
     </main>
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.6/dist/js/bootstrap.bundle.min.js"
