--- a/blog/templates/blog_ntt/index.html
+++ b/blog/templates/blog_ntt/index.html
@@ -1,74 +1,28 @@
-<!DOCTYPE html>
-<html lang="en">
+{% extends 'base.html' %}
 
-<head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>NTT Blog</title>
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.6/dist/css/bootstrap.min.css" rel="stylesheet"
-        integrity="sha384-4Q6Gf2aSP4eDXB8Miphtr37CMZZQ5oXLH2yaXMJ2w8e2ZtHTl7GptT4jmndRuHDT" crossorigin="anonymous" />
-</head>
+{% block title %} Index {% endblock %}
+{% block main %}
+<h1>博客列表</h1>
+<div class="row row-gap-3">
+    <div class="col-6">
+        <div class="card">
+            <div class="card-header">
+                <a href="#">零基礎到項目實戰</a>
+            </div>
+            <div class="card-body" style="height: 150px;">
 
-<body style="background-color:#DCDCDC;">
-    <header class="p-3 text-bg-light border-bottom mb-3">
-        <div class="container">
-            <div class="d-flex flex-wrap align-items-center justify-content-center justify-content-lg-start">
-                <a href="/blog/" class="d-flex align-items-center mb-2 mb-lg-0 text-white text-decoration-none">
-                    <img src="https://upload.wikimedia.org/wikipedia/commons/6/67/Logo_Global_NTT_DATA_Future_Blue_RGB.png"
-                        height="40px" alt="NTT DATA">
-                </a>
-                <ul class="nav col-12 col-lg-auto me-lg-auto mb-2 justify-content-center mb-md-0">
-                    <li><a href="/blog/" class="nav-link px-2 text-secondary">首頁</a></li>
-                    <li><a href="/blog/detail" class="nav-link px-2 text-secondary">瀏覽文章</a></li>
-                    <li><a href="/blog/pub_blog" class="nav-link px-2 text-secondary">發佈博客</a></li>
-                    <li><a href="#" class="nav-link px-2 text-secondary">設備清單</a></li>
-                    <li><a href="#" class="nav-link px-2 text-secondary">分行清單</a></li>
-                    <li><a href="#" class="nav-link px-2 text-secondary">關於</a></li>
-                </ul>
-                <form class="col-12 col-lg-auto mb-3 mb-lg-0 me-lg-3" role="search">
-                    <input type="search" class="form-control form-control-dark text-bg-light" placeholder="Search..."
-                        aria-label="Search">
-                </form>
-                    <a href="/auth/login" class="btn btn-outline-primary me-2" role="button" aria-disabled="true">Login</a>
-                    <a href="/auth/register" class="btn btn-outline-warning" role="button" aria-disabled="true">Register</a>
+                <p class="card-text">With supporting text below as a natural lead-in to additional content.</p>
+
+            </div>
+            <div class="card-footer text-body-secondary d-flex justify-content-between  align-items-center">
+                <div>
+                    <img src="https://icons.veryicon.com/png/System/iOS%207/Network%20Router.png"
+                        style="height: 40px; width: 40px;" alt="">
+                    <span>Lettuce Lu</span>
                 </div>
+                <div>發佈時間 : 2025-05-31 14:21:53</div>
             </div>
         </div>
-    </header>
-    <main class="container bg-white rounded p-3">
-        <h1>博客列表</h1>
-        <div class="row row-gap-3">
-            <div class="col-6">
-                <div class="card">
-                    <div class="card-header">
-                        <a href="#">零基礎到項目實戰</a>
-                    </div>
-                    <div class="card-body" style="height: 150px;">
-
-                        <p class="card-text">With supporting text below as a natural lead-in to additional content.</p>
-
-                    </div>
-                    <div class="card-footer text-body-secondary d-flex justify-content-between  align-items-center">
-                        <div>
-                            <img src="https://icons.veryicon.com/png/System/iOS%207/Network%20Router.png" style="height: 40px; width: 40px;" alt="">
-                            <span>Lettuce Lu</span>
-                        </div>
-                        <div>發佈時間 : 2025-05-31 14:21:53</div>
-                    </div>
-                </div>
-            </div>
-        </div>
-    </main>
-
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.6/dist/js/bootstrap.bundle.min.js"
-        integrity="sha384-j1CDi7MgGQ12Z7Qab0qlWQ/Qqz24Gc6BM0thvEMVjHnfYGF0rmFCozFSxQBxwHKO"
-        crossorigin="anonymous"></script>
-    <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.8/dist/umd/popper.min.js"
-        integrity="sha384-I7E8VVD/ismYTF4hNIPjVp/Zjvgyol6VFvRkX/vR+Vc4jQkC+hVqc2pM8ODewa9r"
-        crossorigin="anonymous"></script>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.6/dist/js/bootstrap.min.js"
-        integrity="sha384-RuyvpeZCxMJCqVUGFI0Do1mQrods/hhxYlcVfGPOfQtPJh0JCw12tUAZ/Mv10S7D"
-        crossorigin="anonymous"></script>
-</body>
-
-</html>
+    </div>
+</div>
+{% endblock %}
