--- a/blog/templates/blog_ntt/pub_blog.html
+++ b/blog/templates/blog_ntt/pub_blog.html
@@ -1,123 +1,62 @@
-<!DOCTYPE html>
-<html lang="en">
+{% extends 'base.html' %}
 
-<head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>NTT Blog</title>
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.6/dist/css/bootstrap.min.css" rel="stylesheet"
-        integrity="sha384-4Q6Gf2aSP4eDXB8Miphtr37CMZZQ5oXLH2yaXMJ2w8e2ZtHTl7GptT4jmndRuHDT" crossorigin="anonymous" />
-    <!-- Wang Editor 5 文字編輯器 CSS -->
-    <link href="https://unpkg.com/@wangeditor/editor@latest/dist/css/style.css" rel="stylesheet" />
-    <style>
-        #editor—wrapper {
-            border: 1px solid #ccc;
-            z-index: 100;
-            /* 按需定义 */
-        }
+{% block title %} Publish {% endblock %}
+{% block main %}
 
-        #toolbar-container {
-            border-bottom: 1px solid #ccc;
-        }
-
-        #editor-container {
-            height: 300px;
-        }
-    </style>
-</head>
-
-<body style="background-color:#DCDCDC;">
-    <header class="p-3 text-bg-light border-bottom mb-3">
-        <div class="container">
-            <div class="d-flex flex-wrap align-items-center justify-content-center justify-content-lg-start">
-                <a href="/blog/" class="d-flex align-items-center mb-2 mb-lg-0 text-white text-decoration-none">
-                    <img src="https://upload.wikimedia.org/wikipedia/commons/6/67/Logo_Global_NTT_DATA_Future_Blue_RGB.png"
-                        height="40px" alt="NTT DATA">
-                </a>
-                <ul class="nav col-12 col-lg-auto me-lg-auto mb-2 justify-content-center mb-md-0">
-                    <li><a href="/blog/" class="nav-link px-2 text-secondary">首頁</a></li>
-                    <li><a href="/blog/detail" class="nav-link px-2 text-secondary">瀏覽文章</a></li>
-                    <li><a href="/blog/pub_blog" class="nav-link px-2 text-secondary">發佈博客</a></li>
-                    <li><a href="#" class="nav-link px-2 text-secondary">設備清單</a></li>
-                    <li><a href="#" class="nav-link px-2 text-secondary">分行清單</a></li>
-                    <li><a href="#" class="nav-link px-2 text-secondary">關於</a></li>
-                </ul>
-                <form class="col-12 col-lg-auto mb-3 mb-lg-0 me-lg-3" role="search">
-                    <input type="search" class="form-control form-control-dark text-bg-light" placeholder="Search..."
-                        aria-label="Search">
-                </form>
-                    <a href="/auth/login" class="btn btn-outline-primary me-2" role="button" aria-disabled="true">Login</a>
-                    <a href="/auth/register" class="btn btn-outline-warning" role="button" aria-disabled="true">Register</a>
-                </div>
+<h1>發佈博客</h1>
+<div class="mt-3">
+    <form action="" class="form-control" method="post">
+        <label for="subject">標題</label>
+        <input type="text" class="form-control" placeholder="請輸入標題">
+        <label for="category" class="mt-3">分類</label>
+        <select class="form-control" name="category" id="category">
+            <option class="form-control" value="python" name="category">PYTHON</option>
+            <option class="form-control" value="Java" name="category">JAVA</option>
+            <option class="form-control" value="Go Lang" name="category">GO Lang</option>
+            <option class="form-control" value="PHP" name="category">PHP</option>
+        </select>
+        <label for="content" class="mt-3">內容</label>
+        <div class="">
+            <div id="editor—wrapper">
+                <div id="toolbar-container"><!-- 工具栏 --></div>
+                <div id="editor-container"><!-- 编辑器 --></div>
             </div>
         </div>
-    </header>
-    <main class="container bg-white rounded p-3">
-        <h1>發佈博客</h1>
-        <div class="mt-3">
-            <form action="" class="form-control" method="post">
-                <label for="subject">標題</label>
-                <input type="text" class="form-control" placeholder="請輸入標題">
-                <label for="category" class="mt-3">分類</label>
-                <select class="form-control" name="category" id="category">
-                    <option class="form-control" value="python" name="category">PYTHON</option>
-                    <option class="form-control" value="Java" name="category">JAVA</option>
-                    <option class="form-control" value="Go Lang" name="category">GO Lang</option>
-                    <option class="form-control" value="PHP" name="category">PHP</option>
-                </select>
-                <label for="content" class="mt-3">內容</label>
-                <div class="">
-                    <div id="editor—wrapper">
-                        <div id="toolbar-container"><!-- 工具栏 --></div>
-                        <div id="editor-container"><!-- 编辑器 --></div>
-                    </div>
-                </div>
-                <div class="mt-2 text-end">
-                    <button class="btn btn-primary">發佈</button>
-                </div>
-            </form>
+        <div class="mt-2 text-end">
+            <button class="btn btn-primary">發佈</button>
         </div>
-    </main>
+    </form>
+</div>
 
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.6/dist/js/bootstrap.bundle.min.js"
-        integrity="sha384-j1CDi7MgGQ12Z7Qab0qlWQ/Qqz24Gc6BM0thvEMVjHnfYGF0rmFCozFSxQBxwHKO"
-        crossorigin="anonymous"></script>
-    <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.8/dist/umd/popper.min.js"
-        integrity="sha384-I7E8VVD/ismYTF4hNIPjVp/Zjvgyol6VFvRkX/vR+Vc4jQkC+hVqc2pM8ODewa9r"
-        crossorigin="anonymous"></script>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.6/dist/js/bootstrap.min.js"
-        integrity="sha384-RuyvpeZCxMJCqVUGFI0Do1mQrods/hhxYlcVfGPOfQtPJh0JCw12tUAZ/Mv10S7D"
-        crossorigin="anonymous"></script>
-    <!-- Wang Editor 5 文字編輯器 JS -->
-    <script src="https://unpkg.com/@wangeditor/editor@latest/dist/index.js"></script>
-    <script>
-        const { createEditor, createToolbar } = window.wangEditor
 
-        const editorConfig = {
-            placeholder: 'Type here...',
-            onChange(editor) {
-                const html = editor.getHtml()
-                console.log('editor content', html)
-                // 也可以同步到 <textarea>
-            },
-        }
+<!-- Wang Editor 5 文字編輯器 JS -->
+<script src="https://unpkg.com/@wangeditor/editor@latest/dist/index.js"></script>
+<script>
+    const { createEditor, createToolbar } = window.wangEditor
 
-        const editor = createEditor({
-            selector: '#editor-container',
-            html: '<p><br></p>',
-            config: editorConfig,
-            mode: 'default', // or 'simple'
-        })
+    const editorConfig = {
+        placeholder: 'Type here...',
+        onChange(editor) {
+            const html = editor.getHtml()
+            console.log('editor content', html)
+            // 也可以同步到 <textarea>
+        },
+    }
 
-        const toolbarConfig = {}
+    const editor = createEditor({
+        selector: '#editor-container',
+        html: '<p><br></p>',
+        config: editorConfig,
+        mode: 'default', // or 'simple'
+    })
 
-        const toolbar = createToolbar({
-            editor,
-            selector: '#toolbar-container',
-            config: toolbarConfig,
-            mode: 'default', // or 'simple'
-        })
-    </script>
-</body>
+    const toolbarConfig = {}
 
-</html>
+    const toolbar = createToolbar({
+        editor,
+        selector: '#toolbar-container',
+        config: toolbarConfig,
+        mode: 'default', // or 'simple'
+    })
+</script>
+{% endblock %}
