--- a/blog/templates/blog_auth/register.html
+++ b/blog/templates/blog_auth/register.html
@@ -5,30 +5,35 @@
 <div style="width: 330px;" class="m-auto">
     <h1>註冊</h1>
     <form action="register" method="post">
-
+        {% csrf_token %}
         <div class="mt-2">
             <label for="username">用戶名</label>
-            <input type="text" class="form-control" name="username" id="username" placeholder="請輸入用戶名">
+            <input type="text" class="form-control" name="username" id="username" placeholder="請輸入用戶名" value='{% if username %} {{ username }}{% endif %}'>
         </div>
         <div class="mt-2">
             <label for="email">郵箱</label>
-            <input type="text" class="form-control" name="email" id="email" placeholder="請輸入郵箱">
+            <input type="text" class="form-control" name="email" id="email" placeholder="請輸入郵箱" value='{% if email %} {{ email }}{% endif %}'>
         </div>
         <div class="mt-2">
             <label for="password">密碼</label>
-            <input type="password" class="form-control" name="password" id="password" placeholder="請輸入密碼">
+            <input type="password" class="form-control" name="password" id="password" placeholder="請輸入密碼" value='{% if password %} {{ password }}{% endif %}'>
         </div>
         <div class="mt-2">
             <label for="confirm">確認密碼</label>
-            <input type="password" class="form-control" name="confirm" id="confirm" placeholder="確認密碼">
+            <input type="password" class="form-control" name="confirm" id="confirm" placeholder="確認密碼"  value='{% if confirm %} {{ confirm }}{% endif %}'>
         </div>
         <div class="mt-2">
             <div class="input-group my-3">
                 <label for="code"></label>
-                <input type="text" class="form-control" name="code" id="code" placeholder="驗證碼">
+                <input type="text" class="form-control" name="code" id="code" placeholder="驗證碼" value='{% if code %} {{ code }}{% endif %}'>
                 <button class="btn btn-outline-secondary" type="button" id='captcha-btn'>獲取驗證碼</button>
             </div>
         </div>
+        {% if message %}
+        <div class="alert alert-danger" role="alert">
+            {{ message }}
+        </div>
+        {% endif %}
         <div class="mt-3">
             <button class="btn btn-primary w-100">立即註冊</button>
         </div>
@@ -40,8 +45,9 @@
 
 const email = document.querySelector('#email')
 const btn = document.querySelector('#captcha-btn')
+const code = document.querySelector('#code')
 let countdownInterval;
-let timeLeft = 60;
+let timeLeft = 5;
 function startCountdown(){
 // 禁用按鈕
     btn.disabled = true;
@@ -55,7 +61,7 @@ function startCountdown(){
             clearInterval(countdownInterval);
             btn.disabled = false;
             btn.textContent = '獲取驗證碼';
-            timeLeft = 60;
+            timeLeft = 5;
         }
     }, 1000); 
 }
@@ -65,11 +71,21 @@ btn.addEventListener('click', function(e){
         alert('請輸入郵箱')
     } else {
         // 取消按鈕的點擊事件
-        alert('獲取驗證碼')
+        
+        const API_URL = `http://127.0.0.1:8000/auth/send_test_email?email=` + email.value;
+        axios.get(API_URL)
+        .then(response => {
+            code.value = response.data['number_code']
+            alert('成功獲取驗證碼')
+        }) 
+        .catch(error=>{
+            console.log(error)
+        })
         startCountdown();
     }
 
 }, false)
     
 </script>
+<script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
 {% endblock %}
